--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -7,7 +7,7 @@ title: "🏢 Open WebUI for Enterprises"
 
 In the rapidly advancing AI landscape, staying ahead isn't just a competitive advantage—it’s a necessity. Open WebUI is the **fastest-growing AI platform** designed for **seamless enterprise deployment**, helping organizations leverage cutting-edge AI capabilities with **unmatched efficiency**.  
 
-**NASA, the Canadian Government, the Dutch Government, IBM, LG, and top academic institutions** trust Open WebUI to power their AI-driven initiatives. With its **modular architecture, continuous innovation, and enterprise-grade features**, it’s the **rational choice** for businesses that refuse to fall behind.  
+**NASA, the Canadian Government, the Dutch Government, XAI, Alibaba (Qwen), IBM, LG, and top academic institutions** trust Open WebUI to power their AI-driven initiatives. With its **modular architecture, continuous innovation, and enterprise-grade features**, it’s the **rational choice** for businesses that refuse to fall behind.  
 
 ![users](/images/enterprise/users.png)
 <sub className=" text-xs">*Open WebUI is used by developers from the mentioned organizations and institutions.*</sub>
