--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -74,3 +74,17 @@ Open WebUI’s enterprise solutions provide mission-critical businesses with **a
 ✅ **Access to Private Beta & Enterprise-Only Features** – Stay ahead with access to upcoming, high-priority capabilities.  
 ✅ **Software Bill of Materials (SBOM) & Security Transparency** – Enterprise customers receive **full security reports and compliance packages**.  
 
+---
+
+## **Keep Open WebUI Thriving: Support Continuous Innovation** 
+
+Open WebUI is **fully open source**, and you can use it for free. However, building, maintaining, supporting, and evolving such a powerful AI platform requires **significant effort, time, and resources**. Infrastructure costs, security updates, continuous improvements, and keeping up with the latest AI advancements all demand **dedicated engineering, operational, and research efforts**.  
+
+If your business benefits from Open WebUI, there is a **social expectation** that you help sustain its development—ensuring its continued innovation and **fast iteration cycle to match the rapid advancements in AI**. Your support directly contributes to keeping Open WebUI cutting-edge, reliable, and accessible for all.  
+
+Even if you **don’t need an enterprise license**, consider becoming a **sponsor** to help fund continuous development. Your contributions ensure Open WebUI remains actively maintained, feature-packed, and aligned with the ever-evolving AI landscape.  
+
+💙 **[Sponsor Open WebUI](https://github.com/sponsors/tjbck)** – Join our existing backers in keeping Open WebUI thriving.  
+
+Whether through **enterprise partnerships, contributions, or financial backing**, your support plays a crucial role in sustaining this powerful AI platform for businesses **worldwide**.  
+
