--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -82,7 +82,7 @@ Open WebUI is **fully open source**, and you can use it for free. However, build
 
 If your business benefits from Open WebUI, by saving your time, money or resources, there is a **social expectation** that you help sustain its development—ensuring its continued innovation and **fast iteration cycle to match the rapid advancements in AI**. Your support directly funds critical features, security hardening, performance improvements, and integrations that benefit all users—including you.  
 
-Even if you **don’t need an enterprise license**, consider becoming a **sponsor** to help fund continuous development. It’s an **investment in stability, longevity, and ongoing improvements**. A well-funded Open WebUI means **fewer bugs, fewer security concerns, and a more feature-rich platform** that stays ahead of industry trends. The cost of contributing is a fraction of what it would take to build, maintain, and support an equivalent AI system internally.  
+Even if you **don’t need an enterprise license**, consider becoming a **sponsor** to help fund continuous development. It’s an **investment in stability, longevity, and ongoing improvements**. A well-funded Open WebUI means **fewer bugs, fewer security concerns, and a more feature-rich platform** that stays ahead of industry trends. The cost of sponsoring is a fraction of what it would take to build, maintain, and support an equivalent AI system internally.  
 
 
 💙 **[Sponsor Open WebUI](https://github.com/sponsors/tjbck)** – Join our existing backers in keeping Open WebUI thriving.  
