update docs for feat: add default background image PR #10073

--- a/docs/features/index.mdx
+++ b/docs/features/index.mdx
@@ -98,7 +98,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 🌈 **Theme Customization**: Personalize your Open WebUI experience with a range of options, including a variety of solid, yet sleek themes, customizable chat background images, and three mode options: Light, Dark, or OLED Dark mode - or let *Her* choose for you! ;)
 
-- 🖼️ **Custom Background Support**: Set a custom background from Settings > Interface to personalize your experience.
+- 🖼️ **Custom Background Support**: Users set a custom background from Settings > Interface to personalize the experience. Administrators can configure a default background image with the DEFAULT_BACKGROUND_IMAGE environment variable or by setting a custom background from Admin Panel > Settings > Interface.
 
 - 📝 **Rich Banners with Markdown**: Create visually engaging announcements with markdown support in banners, enabling richer and more dynamic content.
 
