--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -17,7 +17,7 @@ In the rapidly advancing AI landscape, staying ahead isn't just a competitive ad
 
 Transform the way your organization leverages AI. **Contact our enterprise team today** for customized pricing, expert consulting, and tailored deployment strategies.  
 
-📧 **sales@openwebui.com**  
+📧 **sales@openwebui.com** — Support available in **English & Korean (한국어), with more languages coming soon!**  
 
 ---
 
@@ -55,7 +55,7 @@ Open WebUI’s enterprise solutions provide mission-critical businesses with **a
 ✅ **Role-Based Access Control (RBAC)** – Enterprise-ready **SSO, LDAP, and IAM** integration.  
 
 ### 🔧 **Enterprise-Grade Support & SLAs**  
-✅ **Priority SLA Support** – **24/7 support** with dedicated response times for mission-critical issues.  
+✅ **Priority SLA Support** – **24/7 support — Available in English and Korean (한국어)** with dedicated response times for mission-critical issues.  
 ✅ **Dedicated Account Manager** – A **single point of contact** for guidance, onboarding, and strategy.  
 ✅ **Exclusive Office Hours with Core Engineers** – Directly work with the engineers evolving Open WebUI.  
 
