--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -135,7 +135,7 @@ Once `uv` is installed, running Open WebUI is a breeze. Use the command below, e
 
 For users installing Open WebUI with Python's package manager `pip`, **it is strongly recommended to use Python runtime managers like `uv` or `conda`**. These tools help manage Python environments effectively and avoid conflicts. 
 
-Python 3.11 is the development environment. Python 3.12 seems to work but has not been thoroughly tested. Python 3.13 is entirely untested—**use at your own risk**.
+Python 3.12 is the development environment. Python 3.13 is entirely untested—**use at your own risk**.
 
 1. **Install Open WebUI**:  
 
