--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -26,6 +26,11 @@ import { SponsorList } from "@site/src/components/SponsorList";
 
 ![Open WebUI Demo](/images/demo.gif)
 
+:::tip
+**Looking for an [Enterprise Plan](https://docs.openwebui.com/enterprise)?** – **[Speak with Our Sales Team Today!](mailto:sales@openwebui.com)**
+
+Get **enhanced capabilities**, including **custom theming and branding**, **Service Level Agreement (SLA) support**, **Long-Term Support (LTS) versions**, and **more!**
+:::
 
 ## Quick Start with Docker 🐳
 
