--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -87,7 +87,7 @@ It’s an **investment in stability, longevity, and ongoing improvements**. A we
 
 Open WebUI is **fully open source**, and you can use it for free. However, building, maintaining, supporting, and evolving such a powerful AI platform requires **significant effort, time, and resources**. Infrastructure costs, security updates, continuous improvements, and keeping up with the latest AI advancements all demand **dedicated engineering, operational, and research efforts**.  
 
-If your business benefits from Open WebUI, by saving your time, money or resources, there is a **social expectation** that you help sustain its development—ensuring its continued innovation and **fast iteration cycle to match the rapid advancements in AI**. Your support directly funds critical features, security hardening, performance improvements, and integrations that benefit all users—including you.  
+If Open WebUI helps your business save time, money, or resources, we **encourage** you to consider supporting its development. As an independently funded project, sponsorship enables us to maintain a fast iteration cycle to keep up with the rapid advancements in AI. Your support directly contributes to critical features, security enhancements, performance improvements, and integrations that benefit everyone—including you. Open WebUI will continue to offer the same feature set without requiring an enterprise license, ensuring accessibility for all users.
 
 💙 **[Sponsor Open WebUI](https://github.com/sponsors/tjbck)** – Join our existing backers in keeping Open WebUI thriving.  
 
