--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -12,6 +12,7 @@ We understand Docker might not be everyone's preference; however, this approach 
 
 ### 📜 Table of Contents
 
+- [Q: How do I customize the logo and branding?](#q-how-do-i-customize-the-logo-and-branding)
 - [Q: Why am I asked to sign up? Where are my data being sent to?](#q-why-am-i-asked-to-sign-up-where-are-my-data-being-sent-to)
 - [Q: Why can't my Docker container connect to services on the host using localhost?](#q-why-cant-my-docker-container-connect-to-services-on-the-host-using-localhost)
 - [Q: How do I make my host's services accessible to Docker containers?](#q-how-do-i-make-my-hosts-services-accessible-to-docker-containers)
@@ -26,6 +27,12 @@ We understand Docker might not be everyone's preference; however, this approach 
 - [Q: I updated/restarted and now my login isn't working anymore, I had to create a new account and all my chats are gone.](#q-i-updatedrestarted-and-now-my-login-isnt-working-anymore-i-had-to-create-a-new-account-and-all-my-chats-are-gone)
 - [Q: I tried to login and couldn't, made a new account and now I'm being told my account needs to be activated by an admin.](#q-i-tried-to-login-and-couldnt-made-a-new-account-and-now-im-being-told-my-account-needs-to-be-activated-by-an-admin)
 - [Q: Why can't Open WebUI start with an SSL error?](#q-why-cant-open-webui-start-with-an-ssl-error)
+
+#### **Q: How do I customize the logo and branding?**  
+
+**A:** You can customize the theme, logo, and branding with our **[Enterprise License](https://docs.openwebui.com/enterprise)**, which unlocks exclusive enterprise features.  
+
+For more details on enterprise solutions and branding customizations, please contact our sales team at: 📧 **sales@openwebui.com**  
 
 #### **Q: Why am I asked to sign up? Where are my data being sent to?**
 
