--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -3,7 +3,20 @@ sidebar_position: 2000
 title: "🏢 Open WebUI for Enterprises"
 ---
 
+
+:::tip
+
+## Built for Everyone, Backed by the Community  
+
+Open WebUI is completely free to use, with no restrictions or hidden limits.  
+
+It is **independently developed** and sustained by its users. **Optional** licenses are available to **support** ongoing development while providing **additional benefits** for businesses.
+
+:::
+
+
 ## The AI Platform Powering the World’s Leading Organizations  
+
 
 In the rapidly advancing AI landscape, staying ahead isn't just a competitive advantage—it’s a necessity. Open WebUI is the **fastest-growing AI platform** designed for **seamless enterprise deployment**, helping organizations leverage cutting-edge AI capabilities with **unmatched efficiency**.  
 
