--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -34,6 +34,12 @@ Get **enhanced capabilities**, including **custom theming and branding**, **Serv
 
 ## Quick Start with Docker 🐳
 
+:::note
+
+**WebSocket** is required for Open WebUI to function correctly. Ensure that your network configuration allows WebSocket connections.
+
+:::
+
 **If Ollama is on your computer**, use this command:
 
 ```bash
