--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -34,7 +34,7 @@ Get **enhanced capabilities**, including **custom theming and branding**, **Serv
 
 ## Quick Start with Docker 🐳
 
-:::note
+:::info
 
 **WebSocket** is required for Open WebUI to function correctly. Ensure that your network configuration allows WebSocket connections.
 
